# zotero-test-suit

./: _key.py  flake.nix  library.py  main.py  pyproject.toml  requirements.txt  save-to-zotero.py  shell.nix  urllist  utils.py  zotero.py
connector/: Zotero_Connector-5.0.108.xpi  connector.xpi  extension_5_0_108_0.crx
examples/save_to_zotero/: main.py
extensions/zotero/: debug-bridge-6.7.78.xpi
src/zotero_test_suit/: __init__.py
